k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-manager
  namespace: devops-demo
  labels:
    app: task-manager
spec:
  replicas: 3
  selector:
    matchLabels:
      app: task-manager
  template:
    metadata:
      labels:
        app: task-manager
    spec:
      containers:
      - name: task-manager
<<<<<<< HEAD
        image: ghcr.io/cbunna/cicd-project1:main-5ad2d33
=======
        image: ghcr.io/cbunna/cicd-project1:main-5ad2d33084eec9be4e0c61ec101e02d0a9f6e189
>>>>>>> c0c529dac8ea51b600fea7fc5c80a3de17a1aba4
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
        livenessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 5
        securityContext:
          runAsNonRoot: true
          runAsUser: 1001
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: false
