k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: task-manager-service
  namespace: devops-demo
  labels:
    app: task-manager
spec:
  selector:
    app: task-manager
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  type: ClusterIP
